# craftsman

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: api.md  configuration.md  roadmap.md  schema.md
docs/devlog/: 2026-4-16.md  2026-4-17.md  2026-4-18.md  2026-4-19.md  2026-4-20.md  2026-4-21.md  2026-4-22.md  2026-4-23.md  2026-4-24.md  2026-4-26.md  2026-4-28.md  2026-4-29.md  2026-4-30.md  2026-5-1.md  2026-5-4.md  2026-5-5.md  2026-5-6.md
docs/plan/: overview.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md
docs/research/: 2026-4-16-agent-memory.md  2026-4-16-agent-tool-calls.md
docs/setup/: llama.cpp.md  searxng.md  telegram.md
examples/: test_provider.py
src/: main.py
src/craftsman/: auth.py  cli.py  client.py  configure.py  craftsman.yaml  crypto.py  logger.py  provider.py  server.py  telegram_bot.py
src/craftsman.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/craftsman/client/: artifacts.py  base.py  chat.py  completer.py  sessions.py  telegram.py
src/craftsman/memory/: graph.py  librarian.py  structure.py  vector.py
src/craftsman/router/: artifacts.py  deps.py  jobs.py  sessions.py  tools.py
src/craftsman/tools/: agent_tools.py  bash_tools.py  constants.py  executor.py  memory_tools.py  meta_tools.py  plan_tools.py  registry.py  schedule_tools.py  scheduler.py  text_tools.py  web_tools.py
tests/unit/: conftest.py  test_artifacts.py  test_auth.py  test_cli.py  test_client_display.py  test_configure.py  test_crypto.py  test_jobs.py  test_multimodalize.py  test_provider.py  test_server.py  test_sessions_tool_loop.py  test_telegram_bot.py
tests/unit/memory/: test_librarian.py  test_structure.py
tests/unit/tools/: test_agent_tools.py  test_bash_tools.py  test_executor.py  test_memory_tools.py  test_meta_tools.py  test_plan_tools.py  test_registry.py  test_schedule_tools.py  test_scheduler.py  (+2 more)
