[project]
name = "craftsman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
    "keyring>=25.7.0",
    "litellm>=1.83.0",
]

[project.scripts]
craftsman = "craftsman.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"craftsman" = ["craftsman.yaml"]
