[project]
name = "craftsman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
    "colorama>=0.4.6",
    "fastapi>=0.136.0",
    "keyring>=25.7.0",
    "litellm>=1.83.0",
    "uvicorn>=0.44.0",
    "prompt_toolkit>=3.0.0",
    "python-multipart>=0.0.26",
    "pyjwt>=2.12.1",
    "bcrypt>=5.0.0",
    "aiofiles>=25.1.0",
    "python-telegram-bot[webhooks]>=22.7",
]

[project.scripts]
craftsman = "craftsman.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
craftsman = ["craftsman.yaml"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "httpx>=0.28",
]

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
